--- a/c-legacy-releases/2025/02122025.md
+++ b/c-legacy-releases/2025/02122025.md
@@ -158,7 +158,7 @@ ht-degree: 99%
 | 2025 年 1 月 | [欄位未顯示於 [!DNL AEP Segment Builder]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25544) | 新文章 | 了解如何解決即使成功擷取資料後，資料集中的屬性或欄位也未出現在 [!DNL Adobe Experience Platform] [!DNL Segment Builder] 中的問題。 |
 | 2025 年 1 月 | [[!DNL Adobe Experience Platform]：過時的範例設定檔](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25549) | 新文章 | 了解如何解決 [!DNL Adobe Experience Platform] 中的範例設定檔過時的問題，這可能會導致客群設定檔不準確。 |
 | 2025 年 1 月 |  [!DNL Adobe Experience Platform] 的[[!UICONTROL 啟動/資料收集]功能在 [!DNL Safari 17] 無痕模式](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25416)下未運作 | 新文章 | 了解如何解決在無痕模式下使用 [!DNL Safari 17] 時，因 [!DNL Adobe Experience Platform] 的[!UICONTROL 啟動/資料收集]功能無法啟動而妨礙 [!DNL Analytics] 資料擷取的問題。 |
-| 2025 年 1 月 |  [!DNL AEP]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25468)中的[[!DNL Jupyter Notebooks] 環境存取問題 | 新文章 | 了解如何解決 Adobe Experience Platform 中的 [!DNL Jupyter Notebooks] 環境[!DNL Data Science Workspace]變得無法存取並顯示逾時錯誤的問題。 |
+| 2025 年 1 月 |  [!DNL AEP][&#128279;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25468)中的[!DNL Jupyter Notebooks] 環境存取問題 | 新文章 | 了解如何解決 Adobe Experience Platform 中的 [!DNL Jupyter Notebooks] 環境[!DNL Data Science Workspace]變得無法存取並顯示逾時錯誤的問題。 |
 | 2025 年 1 月 | [ [!DNL Adobe Launch ("Tags")] 版本在 [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25531)中無法傳播的問題 | 新文章 | 了解如何解決 [!DNL Adobe Launch] (Experience Platform 標記) 版本無法正確傳播的問題，確保能有效地對所有網站訪客顯示更新內容。 |
 | 2025 年 1 月 | [了解  [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25522) 中的  [!DNL GDPR]  隱私要求延遲 | 新文章 | 了解如何解決處理在 [!DNL Adobe Experience Platform] 內刪除行銷活動資料的 [!DNL GDPR] 隱私要求時的延遲問題。 |
 | 2025 年 1 月 | [[!DNL Adobe Experience Platform]：失敗的身分識別計數與目標啟用似乎不成比例](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25658) | 新文章 | 了解如何解決失敗的身分識別計數與目標啟用似乎不成比例的問題。 |
